# faster-qwen3-tts-universal

./: README.md  bench_chunk_sweep.py  bench_streaming.py  pyproject.toml
benchmarks/: throughput.py
demo/: index.html  server.py
faster_qwen3_tts/: __init__.py  model.py  predictor_graph.py
qwen3_tts_cuda_graphs/: model.py  streaming.py
tests/: test_e2e_parity.py  test_voice_clone_prompt_api.py
