[build-system]
requires = ["setuptools>=77.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["faster_qwen3_tts*"]

[project]
name = "faster-qwen3-tts-universal"
version = "0.3.0"
description = "Real-time Qwen3-TTS inference with universal language support (including Uzbek, Karakalpak, and fine-tuned models)"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "Andres Marafioti" },
    { name = "Davronbek Achilov", email = "davron211@gmail.com" },
]
keywords = ["tts", "qwen", "cuda", "cudagraph", "streaming", "uzbek", "multilingual"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.10"
dependencies = [
    "qwen-tts>=0.1.1",
    "transformers>=4.57",
    "torch>=2.5.1",
    "numpy",
    "soundfile",
    "huggingface-hub",
]

[project.optional-dependencies]
demo = [
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.24.0",
    "python-multipart>=0.0.7",
]

[project.scripts]
faster-qwen3-tts = "faster_qwen3_tts.cli:main"

[project.urls]
Homepage = "https://github.com/davronbek/faster-qwen3-tts-universal"
Repository = "https://github.com/davronbek/faster-qwen3-tts-universal"
